# cppbackend-practice

./: .gitignore
sprint1/problems/async_server/solution/: CMakeLists.txt
sprint1/problems/async_server/solution/src/: http_server.h  main.cpp
sprint1/problems/cafeteria/solution/: CMakeLists.txt
sprint1/problems/final_task/solution/: CMakeLists.txt  conanfile.txt
sprint1/problems/final_task/solution/src/: http_server.h  json_loader.cpp  main.cpp  request_handler.cpp  request_handler.h
sprint1/problems/final_task/solution/temp/src/: model.h
sprint1/problems/map_json/solution/src/: main.cpp  request_handler.h
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/: CMakeLists.txt
sprint1/problems/sync_server/solution/src/: main.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint2/problems/command_line/solution/src/: api_handler.cpp  api_handler.h  app.cpp  app.h  http_server.h  json_loader.cpp  main.cpp  model.cpp  model.h  my_logger.h  request_handler.h  responses.h  ticker.cpp  ticker.h
sprint2/problems/game_state/solution/src/: api_handler.cpp  api_handler.h  app.h  json_loader.cpp  model.cpp  model.h
sprint2/problems/join_game/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/join_game/solution/src/: api_handler.cpp  api_handler.h  app.cpp  app.h  main.cpp  model.cpp  model.h  my_logger.h  request_handler.h
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/move_players/solution/src/: api_handler.cpp  api_handler.h  app.cpp  app.h  json_loader.cpp  model.cpp  model.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint2/problems/server_logging/solution/src/: http_server.cpp  http_server.h  main.cpp  my_logger.h  request_handler.cpp  request_handler.h
sprint2/problems/static_content/solution/: CMakeLists.txt  conanfile.txt
sprint2/problems/static_content/solution/src/: json_loader.cpp  main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/time_control/solution/: Dockerfile
sprint2/problems/time_control/solution/src/: api_handler.cpp  api_handler.h  app.cpp  http_server.h  main.cpp  model.cpp  model.h  my_logger.h  request_handler.h  tagged.h
sprint3/problems/find_return/solution/: .clang-format
sprint3/problems/find_return/solution/src/: api_handler.cpp  app.cpp  app.h  collision_detector.cpp  collision_detector.h  extra_data.cpp  extra_data.h  extra_data_serialization.cpp  http_server.h  json_loader.cpp  logger_handler.h  model.h  request_handler.h
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint3/problems/gather-tests/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gather/solution/: .clang-format
sprint3/problems/gather/solution/src/: collision_detector.cpp  collision_detector.h
sprint3/problems/gen_objects/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/src/: api_handler.h  app.cpp  model.h  ticker.h
sprint3/problems/gen_objects/solution/tests/: extra_data_tests.cpp
sprint3/problems/htmldecode/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/htmldecode/solution/src/: htmldecode.cpp
sprint3/problems/htmldecode/solution/tests/: tests.cpp
sprint3/problems/instrumentation/solution/: event2dot  report
sprint3/problems/load/solution/: ammo.txt
sprint3/problems/scores/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint3/problems/scores/solution/src/: api_handler.h  app.cpp  app.h  collision_detector.cpp  collision_detector.h  extra_data.cpp  extra_data.h  extra_data_serialization.cpp  extra_data_serialization.h  geom.h  json_loader.cpp  json_loader.h  loot_generator.cpp  loot_generator.h  main.cpp  model.cpp  model.h  my_logger.h  options.cpp  options.h  request_handler.cpp  responses.h  ticker.cpp
sprint3/problems/scores/solution/tests/: extra_data_tests.cpp  test_main.cpp
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/src/: api_handler.cpp  app.cpp  app.h  extra_data_serialization.h  http_server.cpp  json_loader.cpp  model.cpp  my_logger.cpp
sprint3/problems/urldecode/solution/src/: urldecode.cpp
sprint3/problems/urldecode/solution/tests/: tests.cpp
sprint3/problems/urlencode/solution/src/: urlencode.cpp
sprint3/problems/urlencode/solution/tests/: tests.cpp
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/db_of_books/solution/src/: main.cpp
sprint4/problems/db_of_books/solution/tests/: tests.cpp
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/state_serialization/solution/src/: api_handler.cpp  app.cpp  app.h  extra_data_json.cpp  extra_data_json.h  json_loader.cpp  main.cpp  model.cpp  model.h  options.cpp  options.h  serialization.cpp  serialization.h  serializing_listener.cpp  serializing_listener.h  ticker.cpp
sprint4/problems/state_serialization/solution/tests/: collision-detector-tests.cpp  extra_data_tests.cpp  loot_generator_tests.cpp  position_tests.cpp  state-serialization-tests.cpp
